--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <a href="index.html"><img id="logo" src="images/images/IMG_4222.jpeg" alt="Shyguy icon"></a>
+    <a href="index.html"><img id="logo" src="images/images/ducky.jpeg" alt="Shyguy icon"></a>
     <h1 id="name"><a href="index.html">My Awesome Website</a></h1>
   </header>
 
