--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="intro">
       <div class="section-content">
         <div class="section-left">
-          <img class="resp-img website" src="images/images/IMG_4222.jpeg" alt="Photo of me">
+          <img class="resp-img website" src="images/ducky.jpeg" alt="Photo of me">
         </div>
         <div class="section-right">
           <p id="intro-text">Mario Mario here. This is my awesome website. I can fix a leaky pipe, stomp some bad guys and save a princess (or anyone) in distress. I have a suite of magical items that let me fly, jump super high, run super fast, and become invincible for short periods of time. If you need some saving, bad guy smashing, or simple toilet unclogging, give me a call!</p>
