--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <img class="resp-img website" src="images/photo me.png" alt="Photo of me">
         </div>
         <div class="section-right">
-          <p id="intro-text">Mario Mario here. This is my awesome website. I can fix a leaky pipe, stomp some bad guys and save a princess (or anyone) in distress. I have a suite of magical items that let me fly, jump super high, run super fast, and become invincible for short periods of time. If you need some saving, bad guy smashing, or simple toilet unclogging, give me a call!</p>
+          <p id="intro-text">Mira Manalastas (she/they) is a printmaker from Washington, DC currently working in Charlottesville. Their work investigates and exposes the continuing effects of US imperialism, feudalism, and bureaucrat capitalism in the Philippines. Through violence, fear, and humor, they subvert a beloved fast-food mascot, Jollibee, and force him to exist in the current political and social climate occuring in the Philippines. Heavily influenced by the legacy of protest in printmaking history, the immediacy and clarity of making protest signs, and the accessibility and empowerment found in street art and graffiti; Mira’s work seeks to engage their viewer in deciphering the contexts they force Jollibee to exist in and to reflect on how the broad themes of US imperialism occur in their daily lives. Mira works mainly with monotype, relief, and newsprint to emphasize immediacy instead of preciousness. </p>
         </div>
       </div>
     </section>
