--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </main>
 
   <footer>
-    <h2>Mario Mario</h2>
+    <h2>Mira Manalastas</h2>
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#work">Work</a></li>
