--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <img class="resp-img website" src="images/IMG_4315.jpeg" alt="Photo of me">
         </div>
         <div class="section-right">
-          <p id="intro-text">Mira Manalastas (she/they) is a printmaker from Washington, DC currently working in Charlottesville. Their work investigates and exposes the continuing effects of US imperialism, feudalism, and bureaucrat capitalism in the Philippines. Through violence, fear, and humor, they subvert a beloved fast-food mascot, Jollibee, and force him to exist in the current political and social climate occuring in the Philippines. Heavily influenced by the legacy of protest in printmaking history, the immediacy and clarity of making protest signs, and the accessibility and empowerment found in street art and graffiti; Mira’s work seeks to engage their viewer in deciphering the contexts they force Jollibee to exist in and to reflect on how the broad themes of US imperialism occur in their daily lives. Mira works mainly with monotype, relief, and newsprint to emphasize immediacy instead of preciousness. 
+          <p id="intro-text">Mira Manalastas (she/they) is a printmaker from Washington, DC currently working in Charlottesville. Their work investigates and exposes the continuing effects of US imperialism, feudalism, and bureaucrat capitalism in the Philippines. 
           </p>
         </div>
       </div>
@@ -36,6 +36,10 @@
     <section id="about">
       <div class="section-divider">
         <h2>About</h2>
+      </div>
+      <div class="section-right">
+        <p id="intro-text"> Through violence, fear, and humor, they subvert a beloved fast-food mascot, Jollibee, and force him to exist in the current political and social climate occuring in the Philippines. Heavily influenced by the legacy of protest in printmaking history, the immediacy and clarity of making protest signs, and the accessibility and empowerment found in street art and graffiti; Mira’s work seeks to engage their viewer in deciphering the contexts they force Jollibee to exist in and to reflect on how the broad themes of US imperialism occur in their daily lives. Mira works mainly with monotype, relief, and newsprint to emphasize immediacy instead of preciousness. 
+        </p>
       </div>
     </section>
 
