--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <header>
     <a href="index.html"><img id="logo" src="images/photo me.png" alt="Shyguy icon"></a>
-    <h1 id="name"><a href="index.html">My Awesome Website</a></h1>
+    <h1 id="name"><a href="index.html">mira manalastas</a></h1>
   </header>
 
   <nav>
     <a href="#about">About</a>
     <a href="#work">Work</a>
-    <a href="#play">Play</a>
+    <a href="#contact">Contact</a>
   </nav>
 
   <main>
@@ -48,6 +48,9 @@
       <div class="section-divider">
         <h2>Work</h2>
       </div>
+       <div class="section-right">
+        <p id="intro-text"> I work mainly with monotype, monoprints, relief, and utilize crayons and ink in creating additional layers. 
+        </p>
     </section>
 
     <section id="play">
@@ -63,7 +66,7 @@
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#work">Work</a></li>
-      <li><a href="#play">Play</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </footer>
 </body>
