--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@
         </p>
     </section>
 
-    <section id="play">
+    <section id="contact">
       <div class="section-divider">
-        <h2>Play</h2>
+        <h2>Contact</h2>
       </div>
+       <div class="section-right">
+        <p id="intro-text"> IG: @meerkatprints
+                            business inquires: kmm4sf@virginia.edu
+        </p>
     </section>
 
   </main>
