--- a/index.html
+++ b/index.html
@@ -47,10 +47,15 @@
     <section id="work">
       <div class="section-divider">
         <h2>Work</h2>
+         <div class="section-left">
+          <img class="resp-img website" src="images/IMG_4315.jpeg" alt="woodcut">
+        </div>
       </div>
        <div class="section-right">
         <p id="intro-text"> I work mainly with monotype, monoprints, relief, and utilize crayons and ink in creating additional layers. 
         </p>
+      </div>
+      </div>
     </section>
 
     <section id="contact">
